@@ -1,3 +1,8 @@
+2004-05-11	blytkerchan
+	* Makefile.am [test1_CFLAGS]: add top sourcedir to include path
+	* test1.c: include libmemory headers
+	(main): initialize and finialize libmemory
+
 2004-04-12	blytkerchan
 	* test1.c [struct test1_helper1_data]: new type
 	(test1_helper1): new function
